--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
+<meta charset="US-ANSI"> 
 <html>
 <title>BitBlab</title>
-<link rel="stylesheet" href="/stylesheets/style.css"><link rel="stylesheet" href="/stylesheets/chat.css">
+<link rel="stylesheet" href="./stylesheets/style.css"><link rel="stylesheet" href="./stylesheets/chat.css">
 <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
-<script src="/javascripts/socket.io.js"></script>
-<script src="/javascripts/jquery/jquery-1.7.2.min.js"></script>
-<script src="/javascripts/chat.js"></script>
-<link rel="stylesheet" href="/dist/css/bootstrap.min.css">
-<script src="/dist/js/bootstrap.min.js"></script>
+<script src="./javascripts/socket.io.js"></script>
+<script src="./javascripts/jquery/jquery-1.7.2.min.js"></script>
+<script src="./javascripts/chat.js"></script>
+<link rel="stylesheet" href="./dist/css/bootstrap.min.css">
+<script src="./dist/js/bootstrap.min.js"></script>
 <body>
-<audio id="pingSound"><source src="/sounds/ping.mp3" type="audio/mpeg">
-<source src="/sounds/ping.ogg" type="audio/ogg"></audio>
+<audio id="pingSound"><source src="./sounds/ping.mp3" type="audio/mpeg">
+<source src="./sounds/ping.ogg" type="audio/ogg"></audio>
 <audio id="dingdongSound" src="http://www.eventsounds.com/wav/dingdong.wav"></audio>
 <h1>BitBlab</h1>
 <form id="loginform" class="form-inline">
@@ -32,7 +33,7 @@
 <div id="roomWindow" class="shadow"></div>
 </td>
 <td>
-<iframe data-aa='16379' src='//ad.a-ads.com/16379?size=160x600' scrolling='no' style='width:160px; height:600px; border:0px; padding:0;overflow:hidden' allowtransparency='true'></iframe>
+<iframe data-aa='16379' src='http://ad.a-ads.com/16379?size=160x600' scrolling='no' style='width:160px; height:600px; border:0px; padding:0;overflow:hidden' allowtransparency='true'></iframe>
 </td>
 </tr>
 <tr>
