project: Move Static Resources This commit moves all static resources to the public folder to facilitate serving them via Express.

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
 <audio id="pingSound"><source src="./sounds/ping.mp3" type="audio/mpeg">
 <source src="./sounds/ping.ogg" type="audio/ogg"></audio>
-<audio id="dingdongSound" src="http://www.eventsounds.com/wav/dingdong.wav"></audio>
+<audio id="dingdongSound" src=""></audio>
 <h1>BitBlab</h1>
 <form id="loginform" class="form-inline">
 <div class="form-group">
