--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html>
 <title>BitBlab</title>
 <link rel="stylesheet" href="./stylesheets/style.css"><link rel="stylesheet" href="./stylesheets/chat.css">
-<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
-<script src="./javascripts/socket.io.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/aes.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
 <script src="./javascripts/jquery/jquery-1.7.2.min.js"></script>
 <script src="./javascripts/chat.js"></script>
 <link rel="stylesheet" href="./dist/css/bootstrap.min.css">
@@ -31,9 +31,6 @@
 </td>
 <td>
 <div id="roomWindow" class="shadow"></div>
-</td>
-<td>
-<iframe data-aa='16379' src='http://ad.a-ads.com/16379?size=160x600' scrolling='no' style='width:160px; height:600px; border:0px; padding:0;overflow:hidden' allowtransparency='true'></iframe>
 </td>
 </tr>
 <tr>
