--- a/public/index.html
+++ b/public/index.html
@@ -34,25 +34,18 @@
 </td>
 </tr>
 <tr>
+
 <td>
-<p>Join/Create Room/PM User</p>
+<input id="msg" type="text" style="width: 70vw; display:inline-block" disabled="true" class="form-control">
+<select id="color" style="width: 100px; display:inline-block" disabled class="form-control"></select>
+<input id="buycolorinput" type="text" style="width: 100px; display:inline-block" disabled="true" class="form-control">
+<input id="buycolor" type="button" value="Buy Colors" disabled="true" class="btn btn-success">
+<td id="newRoom">
 <form class="form-inline">
 <input id="newinput" type="text" style="width: 125px" disabled="true" class="form-control">
 <input id="newbutton" type="button" value="Join/Create Room" disabled="true" class="btn btn-success">
 </form>
 </td>
-</tr>
-</table>
-<p></p>
-<div>
-<br>
-<table>
-<tr>
-<td>
-<input id="msg" type="text" style="width: 600px" disabled="true" class="form-control"></td>
-<td><select id="color" style="width: 100px" disabled class="form-control"></select></td>
-<td><input id="buycolorinput" type="text" style="width: 100px" disabled="true" class="form-control"></td>
-<td><input id="buycolor" type="button" value="Buy Colors" disabled="true" class="btn btn-success"></td>
 </tr>
 </table>
 </div>
