--- a/public/index.html
+++ b/public/index.html
@@ -2,28 +2,33 @@
 <html>
 <title>BitBlab</title>
 <link rel="stylesheet" href="./stylesheets/style.css"><link rel="stylesheet" href="./stylesheets/chat.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/aes.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
-<script src="./javascripts/jquery/jquery-1.7.2.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 <script src="./javascripts/chat.js"></script>
-<link rel="stylesheet" href="./dist/css/bootstrap.min.css">
-<script src="./dist/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <body>
 <audio id="pingSound"><source src="./sounds/ping.mp3" type="audio/mpeg">
 <source src="./sounds/ping.ogg" type="audio/ogg"></audio>
 <audio id="dingdongSound" src=""></audio>
-<h1>BitBlab</h1>
-<form id="loginform" class="form-inline">
-<div class="form-group">
-<label for="userName">Username:</label>
-<input id="userName" type="text" size="30" class="form-control"></div>
-<div class="form-group">
-<label for="password">Password:</label><input id="password" type="password" size="30" class="form-control"></div>
-<input id="register" type="button" value="Register" class="btn btn-info">
-<input id="login" type="button" value="Login" class="btn btn-primary"></form>
-<span id="feedback"><span id="balance" class="label label-success"></span>
+<div style="padding: 2px;">
+	<h2 style="display: inline-block; float: left; margin: 0px">BitBlab</h2>
+	<form id="loginform" class="form-inline" style="display: inline-block; float: right">
+		<div class="form-group" style="display: inline-block;">
+			<label for="userName">Username: </label>
+			<input id="userName" type="text" size="30" class="form-control">
+		</div>
+		<div class="form-group" style="display: inline-block;">
+			<label for="password">Password: </label><input id="password" type="password" size="30" class="form-control">
+		</div>
+		<input id="register" type="button" value="Register" class="btn btn-info">
+		<input id="login" type="button" value="Login" class="btn btn-primary">
+	</form>
+	<img src=""
+	<span id="feedback"><span id="balance" class="label label-success"></span>
+</div>
+<br>
 </span>
-<p></p>
 <table>
 <tr>
 <td>
@@ -34,16 +39,32 @@
 </td>
 </tr>
 <tr>
-
 <td>
-<input id="msg" type="text" style="width: 70vw; display:inline-block" disabled="true" class="form-control">
+<div class="input-group">
+    <input id="msg" type="text" style="width: 70vw; display:inline-block" disabled="true" class="form-control">
+    <span class="input-group-btn">
+        <button class="btn btn-default" type="button">Go!</button>
+    </span>
+</div><!-- /input-group -->
+
+
+</td>
+<td style="padding: 5px">
+<input id="newinput" type="text" style="width: 10vw" disabled="true" class="form-control">
+</td>
+</tr>
+<tr>
+<td>
 <select id="color" style="width: 100px; display:inline-block" disabled class="form-control"></select>
 <input id="buycolorinput" type="text" style="width: 100px; display:inline-block" disabled="true" class="form-control">
 <input id="buycolor" type="button" value="Buy Colors" disabled="true" class="btn btn-success">
-<td id="newRoom">
+</td>
+<td id="newRoom" style="padding: 5px">
 <form class="form-inline">
-<input id="newinput" type="text" style="width: 125px" disabled="true" class="form-control">
-<input id="newbutton" type="button" value="Join/Create Room" disabled="true" class="btn btn-success">
+
+<input id="newbutton" type="button" value="Join/Create Room" disabled="true" class="btn btn-success" style="width: 10vw">
+</td>
+
 </form>
 </td>
 </tr>
