--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html>
 	<title>BitBlab</title>
 	<link rel="stylesheet" href="./stylesheets/style.css"><link rel="stylesheet" href="./stylesheets/chat.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
-	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+	<script src="./javascripts/client.io.js"></script>
+	<script src="./javascripts/jquery.js"></script>
 	<script src="./javascripts/chat.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="./stylesheets/bootstrap.min.css">
+	<script src="./javascripts/bootstrap.min.js"></script>
 	<body>
 		<audio id="pingSound"><source src="./sounds/ping.mp3" type="audio/mpeg">
 		<source src="./sounds/ping.ogg" type="audio/ogg"></audio>
