--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 	<title>BitBlab</title>
 	<link rel="stylesheet" href="./stylesheets/style.css"><link rel="stylesheet" href="./stylesheets/chat.css">
+	<link rel="manifest" href="./misc/manifest.json">
 	<script src="./javascripts/client.io.js"></script>
 	<script src="./javascripts/jquery.js"></script>
 	<script src="./javascripts/chat.js"></script>
