client: fix send button
This commit makes the send button actually work when clicked.

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 					<div class="input-group">
 						<input id="msg" type="text" style="width: 82vw; display:inline-block" disabled="true" class="form-control">
 						<span class="input-group-btn">
-							<button class="btn btn-info" style="width: 5vw" type="button">Send</button>
+							<button id="sendmsg" class="btn btn-info" style="width: 5vw" type="button">Send</button>
 						</span>
 					</div>
 				</td>
