--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 			<tr>
 				<td>
 					<div class="input-group">
-						<input id="msg" type="text" style="width: 82vw; display:inline-block" disabled="true" class="form-control">
+						<input id="msg" type="text" style="width: 82vw; display:inline-block" disabled="true" class="form-control" />
 						<span class="input-group-btn">
 							<button id="sendmsg" class="btn btn-info" style="width: 5vw" type="button">Send</button>
 						</span>
@@ -52,23 +52,57 @@
 				</td>
 				
 				<td style="padding: 5px">
-					<input id="newinput" type="text" style="width: 10vw" disabled="true" class="form-control">
+					<input id="newinput" type="text" style="width: 10vw" disabled="true" class="form-control" />
 				</td>
 			</tr>
 			
 			<tr>
 				<td>
 					<select id="color" style="width: 100px; display:inline-block" disabled class="form-control"></select>
-					<input id="buycolorinput" type="text" style="width: 100px; display:inline-block" disabled="true" class="form-control">
-					<input id="buycolor" type="button" value="Buy Colors" disabled="true" class="btn btn-success">
+					<input id="buycolorinput" type="text" style="width: 100px; display:inline-block" disabled="true" class="form-control" />
+					<input id="buycolor" type="button" value="Buy Colors" disabled="true" class="btn btn-success" />
 				</td>
 				
 				<td id="newRoom" style="padding: 5px">
 					<form class="form-inline">
-						<input id="newbutton" type="button" value="Join/Create Room" disabled="true" class="btn btn-success" style="width: 10vw">
+						<input id="newbutton" type="button" value="Join/Create Room" disabled="true" class="btn btn-success" style="width: 10vw" />
 					</form>
 				</td>
 			</tr>
 		</table>
+		
+		<!-- Trigger the modal with a button -->
+
+		<!-- Modal -->
+		<div id="settings" class="modal fade" role="dialog">
+		  <div class="modal-dialog">
+
+			<!-- Modal content-->
+			<div class="modal-content">
+			  <div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Register</h4>
+			  </div>
+			  <div class="modal-body">
+				<form id="formRegister">
+					<div class="form-group">
+						<input type="text" class="form-control" id="registerUsername" placeholder="Username" />
+					</div>
+					<div class="form-group">
+						<input type="password" class="form-control" id="registerPassword" placeholder="Password" />
+					</div>
+					<div class="form-group">
+						<input type="email" class="form-control" id="registerEmail" placeholder="Email" autofocus/>
+					</div>
+					<button type="submit" class="btn btn-primary">Register</button>
+				</form>
+			  </div>
+			  <div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			  </div>
+			</div>
+
+		  </div>
+		</div>
 	</body>
 </html>
