--- a/public/index.html
+++ b/public/index.html
@@ -15,20 +15,28 @@
 		<audio id="dingdongSound" src=""></audio>
 		<div id="headBox" style="padding: 2px;">
 			<h2 style="display: inline-block; float: left; margin: 0px">BitBlab</h2>
-			<form id="loginform" class="form-inline" style="display: inline-block; float: right">
-				<div class="form-group" style="display: inline-block;">
-					<label for="userName">Username: </label>
-					<input id="userName" type="text" size="30" class="form-control">
-				</div>
-				<div class="form-group" style="display: inline-block;">
-					<label for="password">Password: </label><input id="password" type="password" size="30" class="form-control">
-				</div>
-				<input id="register" type="button" value="Register" class="btn btn-info">
-				<input id="login" type="button" value="Login" class="btn btn-primary">
-			</form>
+			<div id="loginformdiv">
+				<form id="loginform" class="form-inline" style="display: inline-block; float: right">
+					<div class="form-group" style="display: inline-block;">
+						<label for="userName">Username: </label>
+						<input id="userName" type="text" size="30" class="form-control">
+					</div>
+					<div class="form-group" style="display: inline-block;">
+						<label for="password">Password: </label><input id="password" type="password" size="30" class="form-control">
+					</div>
+					<input id="register" type="button" value="Register" class="btn btn-info">
+					<input id="login" type="button" value="Login" class="btn btn-primary">
+				</form>
+			</div>
+			<div id="settingsmenu" style="display:none">
+				<button type="button" class="btn btn-info btn-sm" id="openSettings">
+					<span class="glyphicon glyphicon-cog"></span>
+				</button>
+			</div>
 			<span id="feedback">
 				<span id="balance" class="label label-success"></span>
 			</span>
+        </button>
 		</div>
 				<div id="chatBox">
 					<div id="msgWindow" style="" class="shadow"></div>
@@ -54,16 +62,12 @@
 			<tr>
 				<td>
 					<select id="color" style="width: 100px; display:inline-block" disabled class="form-control"></select>
-					<input id="buycolorinput" type="text" style="width: 100px; display:inline-block" disabled="true" class="form-control" />
-					<input id="buycolor" type="button" value="Buy Colors" disabled="true" class="btn btn-success" />
 				</td>
-				
-				
 			</tr>
 		</table>
 
-		<!-- Modal -->
-		<div id="settings" class="modal fade" role="dialog">
+		<!-- Register Modal -->
+		<div id="registerModal" class="modal fade" role="dialog">
 		  <div class="modal-dialog">
 
 			<!-- Modal content-->
@@ -94,6 +98,24 @@
 		  </div>
 		</div>
 		
-	<button class="btn btn-info" id="toggleDark">Toggle dark</button>
-	</body>
+		<!-- Settings Modal -->
+		<div id="settings" class="modal fade" role="dialog">
+		    <div class="modal-dialog">
+
+				<!-- Modal content-->
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title">Register</h4>
+					</div>
+					<div class="modal-body">
+						<input id="buycolorinput" type="text" style="width: 100px; display:inline-block" disabled="true" class="form-control" />
+						<input id="buycolor" type="button" value="Buy Colors" disabled="true" class="btn btn-success" />
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
 </html>
