--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
-						<h4 class="modal-title">Register</h4>
+						<h4 class="modal-title">Settings</h4>
 					</div>
 					<div class="modal-body">
 						<input id="buycolorinput" type="text" style="width: 100px; display:inline-block" disabled="true" class="form-control" />
