app: block.io hold
#BB-26
This commit wraps up block.io integration for now until we can determine if
block.io is the best way to go.

--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,8 @@
 					<div class="modal-body">
 						<input id="buycolorinput" type="text" style="width: 100px; display:inline-block" disabled="true" class="form-control" />
 						<input id="buycolor" type="button" value="Buy Colors" disabled="true" class="btn btn-success" />
+						<br />
+						<input id="depositbutton" type="button" value="Deposit BTC" disabled="true" class="btn btn-success" />
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
