--- a/public/index_old.html
+++ b/public/index_old.html
@@ -1,7 +1,7 @@
 <meta charset="US-ANSI"> 
 <html>
 	<title>BitBlab</title>
-	
+	<link rel="stylesheet" href="./stylesheets/chat.css">
 	<link rel="manifest" href="./misc/manifest.json">
 	<script src="./javascripts/client.io.js"></script>
 	<script src="./javascripts/jquery.js"></script>
@@ -9,35 +9,35 @@
 	<script src="./javascripts/style.js"></script>
 	<link rel="stylesheet" href="./stylesheets/bootstrap.min.css">
 	<script src="./javascripts/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="./stylesheets/chat.css">
 	<body>
 		<audio id="pingSound"><source src="./sounds/ping.mp3" type="audio/mpeg">
 		<source src="./sounds/ping.ogg" type="audio/ogg"></audio>
 		<audio id="dingdongSound" src=""></audio>
-
-		<div id="headBox" class="row" style="margin-top: 20px">
-			<div class="col-md-6">
-				<img src="images/bitblab_2.png" style="margin-left: 20px; height: 50px; width: 230px;">
-			</div>
-			<form class="loginform">
-				<div class="col-md-2">
-					<input id="userName" style="float: right;" type="text" placeholder="Username" class="form-control">
-				</div>
-				<div class="col-md-2">
-					<input id="password" type="password" style="float: right;" placeholder="Password" class="form-control">
-				</div>
-				<div class=col-md-2>
-					<input id="login" type="button" value="Login" class="btn btn-primary">
+		<div id="headBox" style="padding: 2px;">
+			<h2 style="display: inline-block; float: left; margin: 0px">BitBlab</h2>
+			<div id="loginformdiv">
+				<form id="loginform" class="form-inline" style="display: inline-block; float: right">
+					<div class="form-group" style="display: inline-block;">
+						<label for="userName">Username: </label>
+						<input id="userName" type="text" size="30" class="form-control">
+					</div>
+					<div class="form-group" style="display: inline-block;">
+						<label for="password">Password: </label><input id="password" type="password" size="30" class="form-control">
+					</div>
 					<input id="register" type="button" value="Register" class="btn btn-info">
-				</div>
-			</form>
+					<input id="login" type="button" value="Login" class="btn btn-primary">
+				</form>
+			</div>
+			<div id="settingsmenu" style="display:none">
+				<button type="button" class="btn btn-info btn-sm" id="openSettings">
+					<span class="glyphicon glyphicon-cog"></span>
+				</button>
+			</div>
+			<span id="feedback">
+				<span id="balance" class="label label-success"></span>
+			</span>
+        </button>
 		</div>
-
-
-
-
-
-
 				<div id="chatBox">
 					<div id="msgWindow" style="" class="shadow"></div>
 					<div class="input-group">
